--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <div class="destination" id="kntt">
                 <h2>Sao Paolo</h2>
             </div>
+            <div class="destination" id="btt">
+                <h2>Sao Paolo</h2>
+            </div>
         </div>
     </div>
 
